--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
+django==5.1.3
+django-unfold==0.41.0
 django-widget-tweaks==1.5.0
+django-colorfield==0.11.0
+django-admin-interface==0.29.2
+pandas==2.2.3
